Bug 787060 - Update android widget RedrawAll to invalidate the entire view to work with DLBI. r=mattwoodrow